# projeto-final-jopzoli

./: CMakeLists.txt  CMakePresets.json  README.md  TODOLIST.txt
mygame/: CMakeLists.txt
mygame/cmake/: generate_shaders_resource.cmake
mygame/src/: game.cpp  game.hpp  main.cpp
mygame/src/.extern/: assimp-vc143-mtd.exp
mygame/src/.generated/shaders/: basic.frag  basic.vert  notex.frag  notex.vert  shader_resource.hpp  test.frag  test.vert
mygame/src/.old/: matrix3.hpp  matrix4.hpp  quaternion.hpp  vector2.hpp  vector3.hpp  vector4.hpp
mygame/src/actor/: actor.cpp  actor.hpp
mygame/src/actor/camera/: camera.hpp
mygame/src/actor/component/: aabbcomponent.cpp  aabbcomponent.hpp  cameracomponent.cpp  cameracomponent.hpp  component.cpp  component.hpp  fsmcomponent.cpp  fsmcomponent.hpp  modelcomponent.cpp  modelcomponent.hpp  rigidbodycomponent.cpp  rigidbodycomponent.hpp  scenecomponent.cpp  scenecomponent.hpp
mygame/src/actor/myactors/: arac.cpp  arac.hpp  fireball.cpp  fireball.hpp  icosaedro.cpp  icosaedro.hpp  mage.cpp  mage.hpp  multiicos.cpp  multiicos.hpp  plane.cpp  plane.hpp  test.hpp  testactor.cpp  testactor.hpp
mygame/src/assets/: cube.fbx  mage.mtl  plane.mtl  teapot.3ds  teapot.fbx  teapot.mtl
mygame/src/math/: math.hpp
mygame/src/memory/: memory.cpp  memory.hpp  monotonicstorage.cpp  monotonicstorage.hpp  refcounter.hpp
mygame/src/object/: object.cpp  object.hpp
mygame/src/scene/: scene.cpp  scene.hpp
mygame/src/scene/myscenes/: mainscene.cpp  mainscene.hpp
mygame/src/shaders/: notex.frag  notex.vert  plane.frag  plane.vert  test.frag  test.vert
mygame/src/utils/: asserts.hpp  define.hpp  exception.hpp  hashsupport.hpp  logger.cpp  logger.hpp  rttisupport.cpp  rttisupport.hpp  type.hpp  util.hpp
